@@ -2,7 +2,7 @@ use strict;
 use warnings;
 
 use MARC::Convert::Wikidata::Utils qw(clean_publisher_place);
-use Test::More 'tests' => 20;
+use Test::More 'tests' => 21;
 use Test::NoWarnings;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
 
@@ -100,3 +100,8 @@ is($ret, decode_utf8('České Budějovice'), encode_utf8("Publisher name '$input
 $input_publisher_place = decode_utf8('V Poděbradech');
 $ret = clean_publisher_place($input_publisher_place);
 is($ret, decode_utf8('Poděbrady'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
+
+# Test.
+$input_publisher_place = decode_utf8('V Telči');
+$ret = clean_publisher_place($input_publisher_place);
+is($ret, decode_utf8('Telč'), encode_utf8("Publisher name '$input_publisher_place' after cleanup."));
