@@ -1,5 +1,6 @@
 0.05
  - Add edition number use case.
+ - Add publisher place use case.
 
 0.04 2023-06-11T18:24:52+02:00
  - Add publication date use case.
